@@ -425,7 +425,7 @@ eap_method_peap_new (const char *glade_file,
 	} else
 		gtk_combo_box_set_active (GTK_COMBO_BOX (widget), 1);
 
-	widget = glade_xml_get_widget (parent->xml, "eap_peap_anon_identity_entry");
+	widget = glade_xml_get_widget (xml, "eap_peap_anon_identity_entry");
 	if (s_8021x && s_8021x->anonymous_identity)
 		gtk_entry_set_text (GTK_ENTRY (widget), s_8021x->anonymous_identity);
 
